fidoconfig 0.7
--------------

----- cvs ci ------
Mon Mar  15 20:50
Max:
+ win32 port by Edgar Chupit (chupit@mail.lv)
+ logEchoToScreen
+ update tparser
	
----- cvs ci ------
Wed Mar  10 15:37
Max:
+ "availableareas" changed to "forwardRequestFile"
+ "areafixKillReports"
+ update proposal
+ update tparser
	
----- cvs ci ------
Mon Mar  8 21:42
Max:
- fixed a bug when found unknown link in echoarea

Mon, Mar 1 22:00
  Gabriel Plutzar
+ included new keywords & features needed by Husky Tick:
  * FileAreaBaseDir <directory>                                
    Where the directories for all File areas shall be made at autocreate  
    Same as MsgBaseDir                                                    
  * AutoFileCreateDefaults <string>                                       
    Defaults for File Area Autocreate                                     
  * FileFixHelp <file>                                                    
    Help file for FileFix  (Same as AreaFixHelp for AreaFix)              
  * FileArea <name> <fileareapath> <uplink> [options] <downlinks>         
    Same as EchoArea, most options are valid                              
+ included generic new keyword fpr HPT & HTICK
  * LogLevels <string>
    You can specify all Loglevels you want in your log
    Default is 123456789, use 23456789 if you don't want all the IDLE
    sessions in your logfile (eg when you start hpt once a minute)
- Minor Bugfixes

fidoconfig 0.6 
(released on Mon Mar  1 19:49:03 CET 1999)
--------------

Mon Mar  1 19:47:36 CET 1999
- applied work when i staid in Austria
- djgpp port

----- cvs ci ------
Thu Feb 25
  Gabriel Plutzar
* Rewrote patimat, changed priority of include file directories in hpt to
  include the new patimat funktion correctly, included missing include
  files.
+ Added patimat to fconf2fidogate for better config-file interpretation

----- cvs ci ------
Mon Feb 22 11:09:53 MET 199
  Tobias Ernst:
+ Added patimat for case insensitive pattern matching	
